<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.techeniac.healthsample.ui.launch.step.StepViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:elevation="2dp"
            android:gravity="center"
            app:title="@string/reports"
            app:titleTextColor="@color/white">

            <ImageView
                android:id="@+id/ivAdd"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/_10sdp"
                android:padding="@dimen/_2sdp"
                android:src="@drawable/btn_plus" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_5sdp"
                android:orientation="vertical"
                android:weightSum="1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardElevation="@dimen/_5sdp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/_5sdp"
                                android:text="@string/today"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/_12sdp" />

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:padding="@dimen/_10sdp">

                              <!--  <ProgressBar
                                    android:id="@+id/progressCircular"
                                    style="?android:attr/progressBarStyleHorizontal"
                                    android:layout_width="@dimen/_80sdp"
                                    android:layout_height="@dimen/_80sdp"
                                    android:layout_centerInParent="true"
                                    android:background="@drawable/circle_shape"
                                    android:indeterminate="false"
                                    android:padding="@dimen/_5sdp"
                                    android:progressDrawable="@drawable/circular_progress_bar"
                                    android:rotation="-210" />-->

                                <ProgressBar
                                    android:id="@+id/progressCircular"
                                    android:layout_width="@dimen/_90sdp"
                                    android:layout_height="@dimen/_90sdp"
                                    android:layout_centerInParent="true"
                                    android:indeterminate="false"
                                    android:indeterminateOnly="false"
                                    android:padding="@dimen/_5sdp"
                                    android:progressDrawable="@drawable/circular_progress" />

                                <LinearLayout
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_centerInParent="true"
                                    android:orientation="vertical"
                                    android:padding="@dimen/_10sdp">

                                    <TextView
                                        android:id="@+id/tvProgressSteps"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:autoSizeTextType="uniform"
                                        android:gravity="center"
                                        android:text="0"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/_15sdp"
                                        android:textStyle="bold" />

                                    <TextView

                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="center"
                                        android:autoSizeTextType="uniform"
                                        android:gravity="center"
                                        android:text="@string/steps"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/_11sdp"
                                        android:textStyle="bold" />
                                </LinearLayout>


                            </RelativeLayout>
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardBackgroundColor="@color/white"
                        app:cardCornerRadius="@dimen/_5sdp"
                        app:cardElevation="@dimen/_5sdp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:padding="@dimen/_5sdp"
                                android:text="@string/heart_rate"
                                android:textColor="@color/textColor"
                                android:textSize="@dimen/_12sdp" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:autoSizeTextType="uniform"
                                android:gravity="center"
                                android:text="92"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_20sdp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginBottom="@dimen/_10sdp"
                                android:autoSizeTextType="uniform"
                                android:gravity="center"
                                android:text="@string/bpm"
                                android:textColor="@color/black"
                                android:textSize="@dimen/_9sdp"
                                android:textStyle="bold" />

                            <com.github.mikephil.charting.charts.LineChart
                                android:id="@+id/lineChart"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="bottom"
                                android:layout_margin="5dp"
                                android:padding="@dimen/_5sdp" />
                        </LinearLayout>

                    </androidx.cardview.widget.CardView>
                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="@dimen/_5sdp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:orientation="vertical"
                        android:padding="@dimen/space_5dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"

                            android:text="@string/week"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/_12sdp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                android:layout_margin="@dimen/_5sdp"
                                android:layout_weight="1.5"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="@dimen/_2sdp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/total" />

                                <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:orientation="horizontal">

                                    <TextView
                                        android:id="@+id/tvSteps"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:autoSizeTextType="uniform"
                                        android:text="@string/_0"
                                        android:textColor="@color/black"
                                        android:textSize="@dimen/_22sdp" />

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginStart="@dimen/_5sdp"
                                        android:text="@string/steps"
                                        android:textColor="@color/black" />
                                </LinearLayout>

                                <LinearLayout
                                    android:id="@+id/legendLlLayout"
                                    android:layout_width="@dimen/space_160dp"
                                    android:layout_height="wrap_content"
                                    android:layout_marginStart="@dimen/space_30dp"
                                    android:orientation="vertical" />

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:autoSizeTextType="uniform"
                                    android:lines="1"
                                    android:text="@string/october_6_to_october_12"
                                    android:textColor="@color/black"
                                    android:textSize="@dimen/_8sdp" />
                            </LinearLayout>


                            <com.github.mikephil.charting.charts.PieChart
                                android:id="@+id/pieChart"

                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_margin="@dimen/_5sdp"
                                android:layout_weight="1"
                                android:padding="@dimen/_5sdp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barChart"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp"
                    android:padding="@dimen/_10sdp"
                    android:visibility="gone" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardElevation="@dimen/_5sdp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:paddingStart="@dimen/_5sdp"
                            android:paddingTop="@dimen/_5sdp"
                            android:text="@string/history"
                            android:textColor="@color/textColor"
                            android:textSize="@dimen/_12sdp" />

                        <com.github.mikephil.charting.charts.CombinedChart
                            android:id="@+id/combinedChart"
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/_220sdp"
                            android:layout_margin="@dimen/_5sdp"
                            android:background="@color/white"
                            android:padding="@dimen/_5sdp" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>


</layout>
